testsuite/poke.pkl/offset-type-diag-3.pk
/* { dg-do compile } */

fun foo = (offset<int,0> input, /* { dg-error "bigger than zero" } */
             int len) int:
{
    var ret = 0;
    return ret;
}
